--- a/.github/azure-settings.json
+++ b/.github/azure-settings.json
@@ -1,3 +1,3 @@
 {
-  "commandToExecute": "export GITHUB_TOKEN=${{ secrets.TOKEN }} && sudo -u azureuser bash /home/azureuser/ch-pro/update_app.sh\"
+  "commandToExecute": "export GITHUB_TOKEN=${{ secrets.TOKEN }} && sudo -u azureuser bash /home/azureuser/ch-pro/update_app.sh"
 }
