--- a/.github/workflows/stage-7-af_backend-service2025.yml
+++ b/.github/workflows/stage-7-af_backend-service2025.yml
@@ -2,7 +2,7 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure Functions: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python project to Azure Function App - backend-service2025
+name: Build and deploy Python project to Azure Function App - backend-service-2025
 
 on:
   push:
@@ -35,12 +35,12 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r requirements.txt --target=".python_packages/lib/site-packages"
 
       # Optional: Add step to run tests here
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip ./* .python_packages/*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -48,7 +48,6 @@ jobs:
           name: python-app
           path: |
             release.zip
-            !venv/
 
   deploy:
     runs-on: ubuntu-latest
@@ -69,15 +68,21 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_A335274227514370A50272EFB5182799 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5F9F913F60B34CD29E5F2BD5A8953E39 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_AB8E6058D6F848C99AE253F9D9917B38 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_D31EDE26BD6D4A1391C44A451EF851EA }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_90E0A5392E9147188D6B82DEE7AFBB4C }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C3C70ED0B816419CBE553DDB5599E4AD }}
+
+      - name: Set Application Settings
+        run: |
+          az functionapp config appsettings set --name backend-service2025 --resource-group stage7RG --settings "FUNCTIONS_WORKER_RUNTIME=python" "KEY_VAULT_NAME=mykeystage70" "APPINSIGHTS_INSTRUMENTATIONKEY=azurerm_application_insights.ai.instrumentation_key"
 
       - name: 'Deploy to Azure Functions'
         uses: Azure/functions-action@v1
         id: deploy-to-function
         with:
-          app-name: 'backend-service2025'
+          app-name: 'backend-service-2025'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          scm-do-build-during-deployment: true
+          enable-oryx-build: true
           
