--- a/.github/workflows/stage-7-af_backend-service2025.yml
+++ b/.github/workflows/stage-7-af_backend-service2025.yml
@@ -68,7 +68,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-         creds: ${{ secrets.AZURE_CREDENTIALS }}
+           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_D31EDE26BD6D4A1391C44A451EF851EA }}
+           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_90E0A5392E9147188D6B82DEE7AFBB4C }}
+           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C3C70ED0B816419CBE553DDB5599E4AD }}
 
       - name: Set Application Settings
         run: |
