--- a/.github/workflows/stage-7-af_backend-service2025.yml
+++ b/.github/workflows/stage-7-af_backend-service2025.yml
@@ -68,11 +68,8 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-            client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
-            tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
-            client-secret: ${{ secrets.AZUREAPPSERVICE_CLIENTSECRET }}
-            subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
-
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
+    
       - name: Set Application Settings
         run: |
           az functionapp config appsettings set --name backend-service2025 --resource-group stage7RG --settings "FUNCTIONS_WORKER_RUNTIME=python" "KEY_VAULT_NAME=mykeystage70" "APPINSIGHTS_INSTRUMENTATIONKEY=azurerm_application_insights.ai.instrumentation_key"
