--- a/.github/workflows/stage-7-af_backend-service2025.yml
+++ b/.github/workflows/stage-7-af_backend-service2025.yml
@@ -35,12 +35,12 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies
-        run: pip install -r requirements.txt --target=".python_packages/lib/site-packages"
+        run: pip install -r requirements.txt
 
       # Optional: Add step to run tests here
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip ./* .python_packages/*
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -48,6 +48,7 @@ jobs:
           name: python-app
           path: |
             release.zip
+            !venv/
 
   deploy:
     runs-on: ubuntu-latest
@@ -68,11 +69,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-            creds: ${{ secrets.AZURE_CREDENTIALS }}
-    
-      - name: Set Application Settings
-        run: |
-          az functionapp config appsettings set --name backend-service2025 --resource-group stage7RG --settings "FUNCTIONS_WORKER_RUNTIME=python" "KEY_VAULT_NAME=mykeystage70" "APPINSIGHTS_INSTRUMENTATIONKEY=azurerm_application_insights.ai.instrumentation_key"
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_D61264A3A77F482A927855DCC54EB9E7 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_CE82FE41EE4246FBB37B2DEF1E793B6B }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_8198A1A652454B86961DCFD02B25CD36 }}
 
       - name: 'Deploy to Azure Functions'
         uses: Azure/functions-action@v1
@@ -81,6 +80,4 @@ jobs:
           app-name: 'backend-service2025'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          scm-do-build-during-deployment: true
-          enable-oryx-build: true
           
