--- a/.github/workflows/stage-9-af_backend-service2025.yml
+++ b/.github/workflows/stage-9-af_backend-service2025.yml
@@ -1,7 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure Functions: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python project to Azure Function App - backend-service2025
 
 on:
@@ -12,7 +8,7 @@ on:
 
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
-  PYTHON_VERSION: '3.9' # set this to the python version to use (supports 3.6, 3.7, 3.8)
+  PYTHON_VERSION: '3.10' # set this to the python version to use (supports 3.6, 3.7, 3.8)
 
 jobs:
   build:
@@ -37,8 +33,6 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt --target=".python_packages/lib/site-packages"
 
-      # Optional: Add step to run tests here
-
       - name: Zip artifact for deployment
         run: zip -r release.zip ./* .python_packages/*
 
@@ -46,15 +40,14 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          path: |
-            release.zip
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
@@ -64,7 +57,7 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip     
-        
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -72,7 +65,7 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_DCEAF1EDAA11472FB1700B76DA8EE870 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D04E9D9A7BF04922A1461ACC6AB49C0F }}
 
-  - name: Set Application Settings
+      - name: Set Application Settings
         run: |
           az functionapp config appsettings set --name backend-service2025 --resource-group stage9-RG --settings "COSMOSDB_CONNECTION_STRING=${{ secrets.COSMOSDB_CONNECTION_STRING }}" "FUNCTIONS_WORKER_RUNTIME=python" "KEY_VAULT_NAME=mykey-stage9" "APPINSIGHTS_INSTRUMENTATIONKEY=azurerm_application_insights.ai.instrumentation_key"
 
