--- a/.github/workflows/stage-9-af_backend-2025.yml
+++ b/.github/workflows/stage-9-af_backend-2025.yml
@@ -35,12 +35,12 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r requirements.txt --target=".python_packages/lib/site-packages"
 
       # Optional: Add step to run tests here
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip ./* .python_packages/*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -48,7 +48,6 @@ jobs:
           name: python-app
           path: |
             release.zip
-            !venv/
 
   deploy:
     runs-on: ubuntu-latest
@@ -73,6 +72,9 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_68621C52CE974887934FFCB726F53792 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_2910719F56E547ED9F21B46026AB5F92 }}
 
+      - name: Set Application Settings
+        run: |
+          az functionapp config appsettings set --name backend-2025 --resource-group stage9-RG --settings "COSMOSDB_CONNECTION_STRING=${{ secrets.COSMOSDB_CONNECTION_STRING }}" "FUNCTIONS_WORKER_RUNTIME=python" "KEY_VAULT_NAME=mykey-stage9" "APPINSIGHTS_INSTRUMENTATIONKEY=azurerm_application_insights.ai.instrumentation_key"
       - name: 'Deploy to Azure Functions'
         uses: Azure/functions-action@v1
         id: deploy-to-function
@@ -80,4 +82,5 @@ jobs:
           app-name: 'backend-2025'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          
+           scm-do-build-during-deployment: true
+          enable-oryx-build: true
