--- a/requirements_frontend.txt
+++ b/requirements_frontend.txt
@@ -1,5 +1,20 @@
-chromadb
+openai==1.79.0
 streamlit
-requests
-azure-identity
-azure-keyvault-secrets
+python-dotenv==1.1.0
+fastapi==0.115.9
+uvicorn==0.34.2
+pydantic==2.11.4
+psycopg2-binary==2.9.10
+langchain-community==0.3.24
+langchain-openai==0.3.17
+langchain-chroma==0.2.4
+langchain==0.3.25
+langchain-core==0.3.60
+chromadb==1.0.9
+pypdf==5.5.0
+cryptography==45.0.2
+python-multipart==0.0.20
+azure-core==1.32.0
+azure-storage-blob==12.24.0
+azure-identity==1.19.0
+azure-keyvault-secrets==4.9.0
